FIX: Improve spacing in the options page

--- a/source/style.css
+++ b/source/style.css
@@ -105,6 +105,7 @@ a {
 .Slider {
 	display: block;
 	margin: 4px;
+	margin-left: 0px;
 }
 
 .Slider input{
@@ -123,10 +124,12 @@ a {
 
 .Checkbox {
 	display: block;
+	margin: 5px 0px;
 }
 
 .Checkbox input {
 	vertical-align: top;
+	margin-right: 2px;
 }
 
 .Select {
@@ -137,8 +140,9 @@ a {
 	display:        inline-block;
 	vertical-align: middle;
 	margin:         5px;
+	margin-left:    0px;
 }
 
 input[type=button] {
-	margin-left : 4px;
+	margin-right : 5px;
 }
